# image-bench

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  bitrise.yml  profile  project.clj  run.sh
resources/: eye-0016x0016.txt  eye-0032x0032.txt  rainbow-0016x0016.txt  rainbow-0032x0032.txt
source/clojure/image_bench/: calibration.clj  grayscale.clj  image.clj  sobel.clj
source/cpp/: kanya.cpp  kanya.hpp
source/cpp/bench/: image_calibration.cpp  image_generation.cpp  sobel_bench_cl.cpp  sobel_benchmark.cpp
source/cpp/image/: grayscale.cpp  grayscale.hpp  kernel.cpp  kernel.hpp  sobel.cpp  sobel.hpp  util.cpp  util.hpp
source/java/image/bench/: JOCLSobelTest.java  Util.java
source/opencl/: grayscale.cl  sobel.cl
test/clojure/image_bench/: sobel_test.clj
test/cpp/hex_string/: v1.cpp  v2.cpp
